# libnvme

./: .gitignore  CMakeLists.txt
include/libnvme/: nvme_spec.h
lib/common/: nvme_pci.h
lib/nvme/: nvme_ctrlr.c  pci.c  pci.h
scripts/: bind_or_unbind.sh  dev_to_bdf.sh  example_run.sh  nvme_info_run.sh  nvme_perf_run.sh
tools/example/: example.cpp
